# GlobalProjectCPP

./: .gitignore  CMakeLists.txt  GlobalProject.cpp  GlobalProject.h  main.cpp  main.h
Common/: ParseDecimal.cpp  ParseDecimal.h
